# kaggle-hospital-los

./: Makefile  README.md  main.py  pyproject.toml  start.sh
_docs/: NEXT_SESSION_API_INTEGRATION.md  healthcare-ai-architecture.md  healthcare-ai-dataset.md  healthcare-ai-implementation.md  healthcare-ai-master.md  healthcare-ai-predictor.md
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  data.py  health.py  predictions.py
backend/app/core/: __init__.py
backend/app/models/: __init__.py  prediction.py
backend/app/services/: __init__.py  data_service.py  ml_service.py
backend/ml/: __init__.py
backend/tests/: __init__.py
data/models/: clinical_optimized_model.joblib
data/raw/: hospital_los.csv
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
notebooks/: 01_model_experimentation.ipynb  02_real_dataset_integration.ipynb  clinical_model_development.ipynb
scripts/: debug_data.py  download_data.py  generate_synthetic_data.py  simple_train.py  train_model.py
