[project]
name = "healthcare-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "optuna>=4.4.0",
    "plotly>=6.2.0",
    "polars>=1.32.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
